# triton_client_manager

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.manager  LICENSE  Makefile  README.md  REPO_STANDARD.md  SECURITY.md  SUPPORT.md  TECHNICAL_GUIDE.md  VERSION_STACK.md  config_schema.py  docker-compose.multi-node.yml  test_suite_master.sh
apps/manager/: .gitignore  README.md  bandit.yaml  client_manager.py  config.pbtxt  config_schema.py  dev_server.py  pyproject.toml  pytest.ini  requirements-model-tools.txt  requirements-test.txt  requirements.txt  tcm_cli.py
apps/manager/classes/docker/: __init__.py  dockerthread.py
apps/manager/classes/job/: joberrors.py  jobthread.py
apps/manager/classes/openstack/: __init__.py  openstackerrors.py  openstackthread.py
apps/manager/classes/triton/: __init__.py  constants.py  infer.py  inference_orchestrator.py  tritonerrors.py  tritonthread.py
apps/manager/config/: docker.yaml  jobs.yaml  triton.yaml  websocket.dev.yaml  websocket.prod.yaml  websocket.yaml
apps/manager/devtools/: qa_chaos_flapping_backend.py  qa_chaos_zombie_killer.py  qa_load_tester_ws.py  qa_shutdown_draining_sigterm.py  qa_timeout_stress.py  ws_client.py
apps/manager/payload_examples/: inference.json  inference_inputs_sdk.json  management_create_container.json  management_create_server.json  management_creation.json  management_delete_container.json  management_delete_server.json  management_inspect_config.json  management_load_model.json
apps/manager/schemas/: config_schema.py  triton_model_config.py
apps/manager/tcm/: __init__.py
apps/manager/tests/: conftest.py  smoke_runtime.py  test_auth_utils.py  test_backpressure_executor_full.py  test_client_manager_import.py  test_client_sdk_contract.py  test_config_env_and_management_coverage.py  test_docker_creation_deletion.py  test_docker_info.py  test_error_classification_unit.py  test_integration_backends.py  test_integration_ws.py  test_job_inference_handlers.py  test_job_info.py  test_job_management_creation_deletion_flows.py  test_job_management_inference.py  test_job_management_step_handlers.py  test_jobthread_queues_and_cleanup.py  test_model_inspectors_static.py  test_openstack_auth.py  test_openstack_creation_deletion.py  test_openstack_thread.py  test_qos_drr_fairness.py  test_regression.py  test_scaffold_rollback.py  test_sdk_asyncio_run_guardrail.py  test_sdk_sync.py  test_security_logging.py  test_security_no_onnx_hub.py  test_security_path_traversal.py  test_security_rate_limit_and_auth.py  test_security_role_spoofing.py  test_triton_config_bridge_unit.py  test_triton_creation.py  test_triton_deletion.py  test_triton_infer.py  test_triton_info.py  test_triton_info_errors.py  test_triton_server_dataclass.py  test_websocket_schemas_and_metrics.py  (+2 more)
apps/manager/utils/: auth.py  bounded_executor.py  config_env.py  log_safety.py  logging_config.py  metrics.py  stream_cancel.py
apps/manager/ws_sdk/: __init__.py  sdk.py
sdk/: README.md  pyproject.toml
sdk/src/tcm_client/: __init__.py  cli.py  model_analyze.py  sdk.py
(+374 files in other folders)
