[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcm-client"
version = "0.1.0"
description = "Official Python WebSocket client for Triton Client Manager."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Adrián Morillas Pérez", email = "adrianmorillasperez@gmail.com" },
]
keywords = ["triton", "websocket", "orchestrator", "client"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

dependencies = [
  "websockets>=12,<13",
]

[project.urls]
Homepage = "https://github.com/adrirubim/triton_client_manager"
Repository = "https://github.com/adrirubim/triton_client_manager"
Issues = "https://github.com/adrirubim/triton_client_manager/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tcm-client-cli = "tcm_client.cli:main"

