[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcm-manager-cli"
version = "0.1.0"
description = "CLI unificado `tcm` para Triton Client Manager."
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.2",
]

[project.scripts]
tcm = "apps.manager.tcm_cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N818"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"classes/*/__init__.py" = ["F401", "F403"]
"classes/**/info/data/__init__.py" = ["F401"]
"classes/**/info/info.py" = ["E402"]
"classes/**/openstackthread.py" = ["E402"]
"classes/**/tritonthread.py" = ["E402"]
